--- a/partials/card.hbs
+++ b/partials/card.hbs
@@ -1,12 +1,17 @@
-{{!--
-Re-usable card for linking to posts
---}}
+{{!-- Re-usable card for linking to posts --}}
 
-<article class="gh-card {{post_class}}">
-    <a class="gh-card-link" href="{{url}}">
-        {{#if feature_image}}
-            <picture class="gh-card-picture">
-              <source 
+<article id="post-{{id}}" class="gh-card {{post_class}}">
+    <div class="gh-card-header">
+        {{#if author.profile_image}}
+            <img src="{{author.profile_image}}" alt="{{author.name}}" class="gh-card-avatar" />
+        {{/if}}
+        <span>{{author.name}}</span>
+        <time datetime="{{date format="YYYY-MM-DD"}}">{{date format="D MMM YYYY"}}</time>
+    </div>
+
+    {{#if feature_image}}
+        <picture class="gh-card-picture">
+            <source 
                 srcset="
                 {{img_url feature_image size="xxs" format="avif"}} 30w,
                 {{img_url feature_image size="xs" format="avif"}} 100w,
@@ -14,11 +19,11 @@ Re-usable card for linking to posts
                 {{img_url feature_image size="m" format="avif"}} 600w,
                 {{img_url feature_image size="l" format="avif"}} 1200w,
                 {{img_url feature_image size="xl" format="avif"}} 2000w"
-                {{^if @first}}sizes="(min-width: 1200px) 1200px, 100vw)"{{else}}sizes="(min-width: 800px) 100vw, 700px"{{/if}}
+                sizes="(min-width: 1200px) 1200px, 100vw"
                 type="image/avif"
-                {{^if @first}}loading="lazy"{{/if}}
-              >
-              <source 
+                loading="lazy"
+            >
+            <source 
                 srcset="
                 {{img_url feature_image size="xxs" format="webp"}} 30w,
                 {{img_url feature_image size="xs" format="webp"}} 100w,
@@ -26,12 +31,11 @@ Re-usable card for linking to posts
                 {{img_url feature_image size="m" format="webp"}} 600w,
                 {{img_url feature_image size="l" format="webp"}} 1200w,
                 {{img_url feature_image size="xl" format="webp"}} 2000w"
-                {{^if @first}}sizes="(min-width: 1200px) 1200px, 100vw)"{{else}}sizes="(min-width: 800px) 100vw, 700px"{{/if}}
+                sizes="(min-width: 1200px) 1200px, 100vw"
                 type="image/webp"
-                {{^if @first}}loading="lazy"{{/if}}
-
-              >
-              <img
+                loading="lazy"
+            >
+            <img
                 srcset="
                 {{img_url feature_image size="xxs"}} 30w,
                 {{img_url feature_image size="xs"}} 100w,
@@ -39,19 +43,25 @@ Re-usable card for linking to posts
                 {{img_url feature_image size="m"}} 600w,
                 {{img_url feature_image size="l"}} 1200w,
                 {{img_url feature_image size="xl"}} 2000w"
-                {{^if @first}}sizes="(min-width: 1200px) 1200px, 100vw)"{{else}}sizes="(min-width: 800px) 100vw, 700px"{{/if}}
+                sizes="(min-width: 1200px) 1200px, 100vw"
                 src="{{img_url feature_image size="m"}}"
                 alt="{{#if feature_image_alt}}{{feature_image_alt}}{{else}}{{title}}{{/if}}"
                 class="gh-card-image"
-                {{^if @first}}loading="lazy"{{/if}}
-              >
-            </picture>
-        {{/if}}
-        <div class="gh-card-content">
-            <span class="gh-card-meta"><time datetime="{{date format="YYYY-MM-DD"}}">{{date format="D MMM YYYY"}}</time> <span class="bull">&bull;</span> {{reading_time}}</span>
-            <h2 class="gh-card-title">{{title}}</h2>
-            <p>{{excerpt}}</p>
-            <strong>Read more</strong>
-        </div>
-    </a>
+                loading="lazy"
+            >
+        </picture>
+    {{/if}}
+
+        <!-- Gönderinin uzunluğunu sınırla ve "Read more" bağlantısını ekle -->
+        <p>
+            {{#if content}}
+                {{excerpt words="30"}}
+                {{#if (gt content.length 200)}}
+                    <a href="#" class="gh-card-readmore" onclick="expandPost('post-{{id}}'); return false;">Read more</a>
+                {{/if}}
+            {{else}}
+                {{content}}
+            {{/if}}
+        </p>
+    </div>
 </article>
